--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
   },
   "dependencies": {
     "express": "4.16.2",
+    "immutable": "^4.0.0-rc.12",
     "normalizr": "^3.3.0",
     "prop-types": "15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
     "react-redux": "5.0.6",
-    "redux": "3.7.2"
+    "redux": "3.7.2",
+    "redux-immutable": "^4.0.0"
   }
 }
