--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-dom": "16.1.1",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
-    "redux-immutable": "^4.0.0"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-immutable": "^4.0.0",
+    "redux-logger": "^3.0.6"
   }
 }
