--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "3.7.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-immutable": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
